feat(server): added wath status controller (#10)
